Fix #487 - overlapping relate field name

--- a/core/app/shell/src/themes/suite8/css/fields/_relate.scss
+++ b/core/app/shell/src/themes/suite8/css/fields/_relate.scss
@@ -69,7 +69,7 @@
         white-space: nowrap;
         text-overflow: ellipsis;
         overflow: hidden;
-        width: 100%;
+        width: auto;
       }
 
       .p-dropdown-trigger {
